# Computer-Graphics-a4

./: .gitignore  CMakeLists.txt
Bezier/: Bezier1D.cpp  Bezier1D.h  Bezier2D.cpp  Bezier2D.h  InputManager.h  game.cpp  game.h  main.cpp
DisplayGLFW/: display.cpp  display.h
Engine3D/: DrawBuffer.cpp  DrawBuffer.h  IndexBuffer.cpp  Material.cpp  Material.h  MeshConstructor.cpp  MeshConstructor.h  MovableGLM.cpp  MovableGLM.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  shape.cpp  shape.h  texture.cpp  texture.h
Game/: game.cpp  game.h  main.cpp
Game2/: InputManager.h  game2.cpp  main.cpp
as4/res/shaders/: basicShader.glsl  cubeShader.glsl  cubeShader.vs  cubemapShader.glsl  cubemapShader.vs  greenShader.glsl  lightShader.glsl
backup/: Bezier1D.cpp  Bezier1D.h  Bezier2D.h  InputManager.h  game.cpp  game.h  main.cpp
build1/: .kateproject  CMakeCache.txt  Game@build1.kateproject  Makefile  cmake_install.cmake
res/shaders/: mbrotShader.fs  mbrotShader.vs  raytracingShader.fs  raytracingShader.vs
